# resync-rs

./: .gitignore  Cargo.toml  README.md
example/: Localizable.strings  strings.csv  strings.strings  strings.xml  test.csv
src/: main.rs
src/cli/: args.rs
src/generator/: android.rs  csv.rs  ios.rs  mod.rs
src/parser/: android.rs  csv.rs  ios.rs  mod.rs
src/util/: error.rs
