[package]
name = "resync"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/0xSkash/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4.0"
quick-xml = "0.27.1"



