[package]
name = "resync"
version = "0.5.2"
edition = "2021"
authors = ["https://github.com/0xSkash/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.155", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }

log = "0.4"
pretty_env_logger = "0.4.0"

csv = "1.2.0"

indicatif = "0.17.3"
console = "0.15.5"




